# Game-Engine-Project

./: CMakeLists.txt  README.md
src/: main.cpp
src/engine/: GameConcept.hpp  Minimax.hpp
src/games/tictactoe/: TicTacToe.cpp  TicTacToe.hpp
